--- a/TODO
+++ b/TODO
@@ -1,1 +1,5 @@
 python2 compatibility
+- (remotes) Ask to create folder if it does not exist
+- (remotes) Add option to list all data on the file (including fields not expected)
+- (remotes) Option to add database to the list (with other options)
+
