--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+HIGH
+Remove config code. use library
+
+LOW
 python2 compatibility
 - (remotes) Ask to create folder if it does not exist
 - (remotes) Add option to list all data on the file (including fields not expected)
